--- a/wiki/impulse.wikitext
+++ b/wiki/impulse.wikitext
@@ -8,6 +8,12 @@
 # (''physics'') The integral of force over time.
 #: ''The total impulse from the impact will depend on the kinetic energy of bullet.''
 
+===Translations===
+*Chinese: [[冲动]], [[推力]]
+*French: [[impulsion]]
+*Italian: [[impulso]]
+*Japanese: [[衝動]], [[衝撃]], [[推進力]]
+
 ===Related Terms===
 *[[impel]]
 *[[impulse buy]]
