/* [[Proper]] [[noun]] */ <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -10,7 +10,7 @@
 ===[[Proper]] [[noun]]===
 '''Wiktionary'''
 
-# [[A]] [[collaborate|collaborative]] [[project]] [[to]] [[produce]] [[a]] [[free]] [[and]] [[complete]] [[dictionary]] [[and]] [[thesaurus]] [[in]] [[every]] [[language]].
+# [[A]] [[collaborate|collaborative]] [[project]] [[to]] [[produce]] [[a]] [[free]] [[and]] [[complete]] [[dictionary]] ([[lexicon]], [[thesaurus]], and [[theoton]] [[therein]]) [[in]] [[every]] [[language]].
 
 ==== [[Translations]] ====
 *[[Chinese]]: [[維基字典]]
