--- a/wiki/dvacet.wikitext
+++ b/wiki/dvacet.wikitext
@@ -1,4 +1,7 @@
+==Czech==
+([[Wiktionary:Czech_index_k|index K]])
+
 ===Number===
 
-[[English]]: twenty
-[[Icelandic]]: tuttugu
+#[[English]]: twenty
+#[[Icelandic]]: tuttugu
