--- a/wiki/dvacet.wikitext
+++ b/wiki/dvacet.wikitext
@@ -1,7 +1,7 @@
 ==Czech==
-([[Wiktionary:Czech_index_k|index K]])
+([[Wiktionary:Czech_index_d|index D]])
 
-===Number===
+===Cardinal Number===
 
-#[[English]]: twenty
-#[[Icelandic]]: tuttugu
+#[[English]]: [[twenty]]
+#[[Icelandic]]: [[tuttugu]]
