/* Translations */ <Ivory Coast#3177>

--- a/wiki/Ivory_Coast.wikitext
+++ b/wiki/Ivory_Coast.wikitext
@@ -8,6 +8,7 @@
 *[[Basque]]: [[Boli Kosta]]
 *[[Breton]]: [[Aod an Olifant]]
 *[[Chinese]]: [[科特迪瓦]] (Kētè Díwǎ ker-ter)
+*[[Czech]]: [[Pobřeží slonoviny]]
 *[[Danish]]: [[Côte d'Ivoire]]
 *[[Dutch]]: [[Ivoorkust]]
 *[[Esperanto]]: [[Kotdivaŭro]], [[Ebur-Bordo]], [[Ebura Bordo]]
