--- a/wiki/Cambodia.wikitext
+++ b/wiki/Cambodia.wikitext
@@ -8,29 +8,30 @@
 ===Translations===
 *[[Bosnian]]: Kambodža ''f''
 *[[Breton]]: [[Kambodja]]
-*Chinese: [[柬埔寨]] (Jiǎnpǔzhài)
-*Danish: [[Cambodja]]
-*Dutch: [[Cambodja]]
+*[[Chinese]]: [[柬埔寨]] (Jiǎnpǔzhài)
+*[[Czech]]: [[Kambodža]]
+*[[Danish]]: [[Cambodja]]
+*[[Dutch]]: [[Cambodja]]
 *[[Esperanto]]: [[Kamboĝo]]
-*Finnish: [[Kambodža]]
-*French: [[Cambodge]] ''m''
-*German: [[Kambodscha]]
-*Greek: [[Καμπότζη]]
+*[[Finnish]]: [[Kambodža]]
+*[[French]]: [[Cambodge]] ''m''
+*[[German]]: [[Kambodscha]]
+*[[Greek]]: [[Καμπότζη]]
 *[[Hungarian]]: [[Kambodzsa]]
 *[[Indonesian]]: [[Kamboja]]
 *[[Interlingua]]: Cambodia
-*Italian: [[Cambogia]] ''f''
-*Japanese: [[カンボジア]] (kanbojia)
+*[[Italian]]: [[Cambogia]] ''f''
+*[[Japanese]]: [[カンボジア]] (kanbojia)
 *[[Khmer]]: [[កម្ពុជា]] (Kampučā)
 *[[Malay]]: [[Kemboja]]
-*Polish: [[Kambodża]]
-*Portuguese: [[Camboja]]
-*Romanian: [[Cambodgia]] ''f''
-*Russian: [[Камбоджа]] (Kambodzha)
-*Spanish: [[Camboya]]
-*Swedish: [[Kambodja]]
-*Thai: [[กัมพูชา]] (Kâmpūčhā)
-*Turkish: [[Kambo&#231;ya]]
+*[[Polish]]: [[Kambodża]]
+*[[Portuguese]]: [[Camboja]]
+*[[Romanian]]: [[Cambodgia]] ''f''
+*[[Russian]]: [[Камбоджа]] (Kambodzha)
+*[[Spanish]]: [[Camboya]]
+*[[Swedish]]: [[Kambodja]]
+*[[Thai]]: [[กัมพูชา]] (Kâmpūčhā)
+*[[Turkish]]: [[Kambo&#231;ya]]
 
 ===See also===
 *[[Kampuchea]] (former English name)
