--- a/wiki/Austrian.wikitext
+++ b/wiki/Austrian.wikitext
@@ -15,6 +15,8 @@
 '''Austrian'''
 #Of, from, or pertaining to Austria, or its people.
 ====Translations====
+
+*'''Czech:''' [[rakušanů]]
 *'''Finnish:''' [[itävaltalainen]]
 *'''French:''' [[autrichien]]
 *'''German:''' [[österreichisch]]
