--- a/wiki/Austrian.wikitext
+++ b/wiki/Austrian.wikitext
@@ -4,6 +4,8 @@
 #A person from [[Austria]] or of Austrian descent.
 
 ====Translations====
+
+*'''Czech:''' [[rakušan]]
 *'''Finnish:''' [[itävaltalainen]]
 *'''French:''' [[Autrichien]]
 *'''German:''' [[Österreicher]] ''m'' [[Österreicherin]] ''f''
