--- a/wiki/Belarusian.wikitext
+++ b/wiki/Belarusian.wikitext
@@ -7,6 +7,7 @@
 #:'''Translations'''
 #:*[[Belarusian]]: беларус ''m'', беларуска ''f'', беларусы ''pl''
 #:*[[Chinese]]: [[白俄罗斯人]]
+#:*[[Czech]]: [[Bělorus]]
 #:*[[English]]: [[Belarusian]] ''sg'', [[Belarusians]] ''pl'' (also Belarusan, Belarusans)
 #:*[[German]]: [[Belarusse]] ''m'', [[Belarussin]] ''f''
 #:*[[Japanese]]: [[ベラルーシ人]]
@@ -14,8 +15,6 @@
 #:*[[Lithuanian]]: [[baltar&ugrave;sis]] ''m'' (also "gudas")
 #:*[[Polish]]: [[Bia&#322;orusin (Bia&#322;orus)]] ''m'', [[Bia&#322;orusinka (Bia&#322;oruska)]] ''f'', [[Bia&#322;orusiny (Bia&#322;orusy)]] ''pl''
 #:*[[Russian]]: белорус ''m'', белоруска ''f'', белорусы ''pl''
-
-
 
 ===Adjective===
 #Of, from, or pertaining to Belarus, the Belarusian people or the Belarusian language.
