--- a/wiki/Cambodia.wikitext
+++ b/wiki/Cambodia.wikitext
@@ -6,32 +6,32 @@
 
 
 ===Translations===
-*[[Bosnian]]: Kambodža ''f''
+*[[Bosnian]]: [[Kambodža]] ''f''
 *[[Breton]]: [[Kambodja]]
-*[[Chinese]]: [[柬埔寨]] (Jiǎnpǔzhài)
+*Chinese: [[柬埔寨]] (Jiǎnpǔzhài)
 *[[Czech]]: [[Kambodža]]
 *[[Danish]]: [[Cambodja]]
 *[[Dutch]]: [[Cambodja]]
 *[[Esperanto]]: [[Kamboĝo]]
 *[[Finnish]]: [[Kambodža]]
-*[[French]]: [[Cambodge]] ''m''
-*[[German]]: [[Kambodscha]]
+*French: [[Cambodge]] ''m''
+*German: [[Kambodscha]]
 *[[Greek]]: [[Καμπότζη]]
-*[[Hungarian]]: [[Kambodzsa]]
+*Hungarian: [[Kambodzsa]]
 *[[Indonesian]]: [[Kamboja]]
 *[[Interlingua]]: Cambodia
-*[[Italian]]: [[Cambogia]] ''f''
-*[[Japanese]]: [[カンボジア]] (kanbojia)
+*Italian: [[Cambogia]] ''f''
+*Japanese: [[カンボジア]] (kanbojia)
 *[[Khmer]]: [[កម្ពុជា]] (Kampučā)
 *[[Malay]]: [[Kemboja]]
 *[[Polish]]: [[Kambodża]]
 *[[Portuguese]]: [[Camboja]]
 *[[Romanian]]: [[Cambodgia]] ''f''
-*[[Russian]]: [[Камбоджа]] (Kambodzha)
-*[[Spanish]]: [[Camboya]]
+*Russian: [[Камбоджа]] (Kambodzha)
+*Spanish: [[Camboya]]
 *[[Swedish]]: [[Kambodja]]
 *[[Thai]]: [[กัมพูชา]] (Kâmpūčhā)
-*[[Turkish]]: [[Kambo&#231;ya]]
+*Turkish: [[Kambo&#231;ya]]
 
 ===See also===
 *[[Kampuchea]] (former English name)
