--- a/wiki/Austrian.wikitext
+++ b/wiki/Austrian.wikitext
@@ -5,23 +5,24 @@
 
 ====Translations====
 
-*'''Czech:''' [[rakušan]]
-*'''Finnish:''' [[itävaltalainen]]
-*'''French:''' [[Autrichien]]
-*'''German:''' [[Österreicher]] ''m'' [[Österreicherin]] ''f''
-*'''Polish:''' [[Austriak]] ''m'', [[Austriaczka]] ''f''
-*'''Romanian:''' [[austriac]] ''m'', [[austriac&#259;]] ''f'', [[austrieci]] ''m pl'', [[austriece]] ''f pl''
-*'''Spanish:''' [[austriaco]], [[austríaco]]
+*Czech: [[rakušan]]
+*Finnish: [[itävaltalainen]]
+*French: [[Autrichien]]
+*German: [[Österreicher]] ''m'' [[Österreicherin]] ''f''
+*Polish: [[Austriak]] ''m'', [[Austriaczka]] ''f''
+*Romanian: [[austriac]] ''m'', [[austriac&#259;]] ''f'', [[austrieci]] ''m pl'', [[austriece]] ''f pl''
+*Spanish: [[austriaco]], [[austríaco]]
 
 ===Adjective===
 '''Austrian'''
 #Of, from, or pertaining to Austria, or its people.
+
 ====Translations====
 
-*'''Czech:''' [[rakušanů]]
-*'''Finnish:''' [[itävaltalainen]]
-*'''French:''' [[autrichien]]
-*'''German:''' [[österreichisch]]
-*'''Polish:''' [[austriacki]] ''m'', [[austriacka]] ''f'', [[austriackie]] ''n''
-*'''Romanian:''' [[austriac]] ''m'', [[austriac&#259;]] ''f'', [[austrieci]] ''m pl'', [[austriece]] ''f pl''
-*'''Spanish:''' [[austriaco]], [[austríaco]]
+*Czech: [[rakušanů]]
+*Finnish: [[itävaltalainen]]
+*French: [[autrichien]]
+*German: [[österreichisch]]
+*Polish: [[austriacki]] ''m'', [[austriacka]] ''f'', [[austriackie]] ''n''
+*Romanian: [[austriac]] ''m'', [[austriac&#259;]] ''f'', [[austrieci]] ''m pl'', [[austriece]] ''f pl''
+*Spanish: [[austriaco]], [[austríaco]]
