--- a/wiki/Belarusian.wikitext
+++ b/wiki/Belarusian.wikitext
@@ -5,22 +5,20 @@
 ===Noun===
 #A person from [[Belarus]] or of Belarusian descent.
 #:'''Translations'''
-#:*[[Belarusian]]: беларус ''m'', беларуска ''f'', беларусы ''pl''
-#:*[[Chinese]]: [[白俄罗斯人]]
+#:*Belarusian: [[беларус]] ''m'', [[беларуска]] ''f'', [[беларусы]] ''pl''
+#:*Chinese: [[白俄罗斯人]]
 #:*[[Czech]]: [[Bělorus]]
-#:*[[English]]: [[Belarusian]] ''sg'', [[Belarusians]] ''pl'' (also Belarusan, Belarusans)
-#:*[[German]]: [[Belarusse]] ''m'', [[Belarussin]] ''f''
-#:*[[Japanese]]: [[ベラルーシ人]]
+#:*German: [[Belarusse]] ''m'', [[Belarussin]] ''f''
+#:*Japanese: [[ベラルーシ人]]
 #:*[[Latvian]]: [[baltkrievs]] ''m''
 #:*[[Lithuanian]]: [[baltar&ugrave;sis]] ''m'' (also "gudas")
-#:*[[Polish]]: [[Bia&#322;orusin (Bia&#322;orus)]] ''m'', [[Bia&#322;orusinka (Bia&#322;oruska)]] ''f'', [[Bia&#322;orusiny (Bia&#322;orusy)]] ''pl''
-#:*[[Russian]]: белорус ''m'', белоруска ''f'', белорусы ''pl''
+#:*Polish: [[Bia&#322;orusin (Bia&#322;orus)]] ''m'', [[Bia&#322;orusinka (Bia&#322;oruska)]] ''f'', [[Bia&#322;orusiny (Bia&#322;orusy)]] ''pl''
+#:*Russian: [[белорус]] ''m'', [[белоруска]] ''f'', [[белорусы]] ''pl''
 
 ===Adjective===
 #Of, from, or pertaining to Belarus, the Belarusian people or the Belarusian language.
 #:'''Translations'''
-#:*[[Belarusian]]: беларускі ''m'', беларуская ''f'', беларускія  ''pl''
-#:*[[Chinese]]: [[白俄罗斯的]]
-#:*[[English]]: [[Belarusian]] (also Belarusan)
-#:*[[German]]: [[belarussisch]] (auch wei&slig;ruthenisch)
-#:*[[Japanese]]: [[ベラルーシ語]]
+#:*Belarusian: [[беларускі]] ''m'', [[беларуская]] ''f'', [[беларускія]]  ''pl''
+#:*Chinese: [[白俄罗斯的]]
+#:*German: [[belarussisch]] (auch wei&slig;ruthenisch)
+#:*Japanese: [[ベラルーシ語]]
