--- a/wiki/%E5%AE%9D.wikitext
+++ b/wiki/%E5%AE%9D.wikitext
@@ -19,7 +19,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,11 +34,41 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[寶]]
 
+===Compounds===
+*[[宝宝]]
+*[[宝宝装]]
+*[[宝贝]]
+*[[宝贝疙瘩]]
+*[[宝刹]]
+*[[宝刀]]
+*[[宝刀不老]]
+*[[宝地]]
+*[[宝典]]
+*[[宝盖儿]]
+*[[宝贵]]
+*[[宝号]]
+*[[宝货]]
+*[[宝剑]]
+*[[宝局]]
+*[[宝眷]]
+*[[宝库]]
+*[[宝蓝]]
+*[[宝瓶座]]
+*[[宝山]]
+*[[宝石]]
+*[[宝书]]
+*[[宝塔]]
+*[[宝物]]
+*[[宝藏]]
+*[[宝中之宝]]
+*[[宝重]]
+*[[宝座]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ほう]] (hō)
