--- a/wiki/vingtaine.wikitext
+++ b/wiki/vingtaine.wikitext
@@ -1,6 +1,17 @@
 ==French==
 ===Noun===
-:[[vingtaine]] ''f''
+'''vingtaine''' ''f''
+
 #About 20.
-===Related words===
-:[[centaine]], [[cinquantaine]], [[dizaine]], [[douzaine]], [[huitaine]], [[quarantaine]], [[quinzaine]], [[soixantaine]], [[trentaine]]
+
+===Related terms===
+*[[vingt]]
+*[[centaine]]
+*[[cinquantaine]]
+*[[dizaine]]
+*[[douzaine]]
+*[[huitaine]]
+*[[quarantaine]]
+*[[quinzaine]]
+*[[soixantaine]]
+*[[trentaine]]
