--- a/wiki/congenital.wikitext
+++ b/wiki/congenital.wikitext
@@ -1,1 +1,10 @@
-'''Congenital''' means some treat present since birth.
+==English==
+===Adjective===
+'''congenital'''
+
+# some treat present since birth.
+
+===Related terms===
+*[[con-]]
+*[[congenitally]]
+*[[genital]]
