--- a/wiki/congenital.wikitext
+++ b/wiki/congenital.wikitext
@@ -4,6 +4,9 @@
 
 # some treat present since birth.
 
+===Translations===
+*Polish: [[wrodzony]] (m.), [[wrodzona]] (f.), [[wrodzone]] (n.), [[wrodzone]] (pl.)
+
 ===Related terms===
 *[[con-]]
 *[[congenitally]]
