--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -14,6 +14,7 @@
 *{{he}}: [[איפה השרוטים]] (eifo ha sherotim)
 *{{it}}: [[Dove sono i gabinetti?]]
 *{{ja}}: [[トイレはどこですか。]] (toire wa doko des' ka?)
+*{{pl}}: [[gdzie jest ubikacja?]]
 *{{ru}}: [[Где туалет?]] (g'dye tualyet)
 *{{sk}}: [[Kde je WC?]], [[Kde je záchod?]]
 *{{es}}: [[¿Dónde está el baño?]]
