--- a/wiki/congenital.wikitext
+++ b/wiki/congenital.wikitext
@@ -5,7 +5,7 @@
 # some treat present since birth.
 
 ===Translations===
-*Polish: [[wrodzony]] (m.), [[wrodzona]] (f.), [[wrodzone]] (n.), [[wrodzone]] (pl.)
+*{{pl}}: [[wrodzony]] (m.), [[wrodzona]] (f.), [[wrodzone]] (n.), [[wrodzone]] (pl.)
 
 ===Related terms===
 *[[con-]]
