--- a/wiki/bay.wikitext
+++ b/wiki/bay.wikitext
@@ -25,6 +25,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Czech: [[záliv]] ''m''', [[zátoka]] ''f''
 *French: [[baie]] ''f''
 *German: [[Golf#German|Golf]] ''m''
 *Greek: [[κόλπος]] ''m'' (k&oacute;lpos)
