--- a/wiki/%EB%A7%8C.wikitext
+++ b/wiki/%EB%A7%8C.wikitext
@@ -1,5 +1,18 @@
 ==Korean==
+===Particle===
+'''만''' (man)
+
+# [[only]]
+# [[even]]
+
+====Synonym====
+*[[뿐]]
+
 ===Noun===
 '''만''' (man)
 
-# ([[灣]]): [[bay]]
+# [[灣]]: [[bay]]
+
+===Number===
+
+# [[萬]]: ten thousand
