--- a/wiki/%E6%99%AF.wikitext
+++ b/wiki/%E6%99%AF.wikitext
@@ -17,7 +17,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,41 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ging2
 
+===Compounds===
+*[[景点]]
+*[[景观]]
+*[[景况]]
+*[[景慕]]
+*[[景片]]
+*[[景颇族]]
+*[[景气]]
+*[[景区]]
+*[[景色]]
+*[[景深]]
+*[[景胜]]
+*[[景泰蓝]]
+*[[景天]]
+*[[景物]]
+*[[景象]]
+*[[景仰]]
+*[[景致]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けい]] (kei), [[えい]] (ei)
 ** '''[[Kun]]''': [[けしき]] (keshiki), [[かげ]] (kage)
+
+===Compounds===
+*[[景観]]
+*[[景気]]
+*[[景色]]
+*[[景勝]]
+*[[景品]]
 
 * '''Other info''':  
 
