--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -1,22 +1,11 @@
 ==Japanese==
 <!-- ===Etymology===
-[[神]] ''kami'' "god, divine" + [[風]] ''kaze'' "wind"-->
+[[神]] ''kami'' "god" + [[風]] ''kaze'' "wind"-->
 
 ===Noun===
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
 # Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in the 13th century.
-<!--
-===Noun===
-'''[[神]][[風]]''' (しんぷう, shinpū)
--->
-# Aircraft suicide attacks or attackers in Word War II.
-
-====Translations====
-*English: [[kamikaze]]
 
 ===See also===
 *[[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
-*[[切腹]] (seppuku)
-*[[特攻隊]] (tokkōtai)
-*[[腹切]] (hara-kiri)
