--- a/wiki/ad_fontes.wikitext
+++ b/wiki/ad_fontes.wikitext
@@ -1,9 +1,7 @@
 '''Ad fontes''' is a [[Latin]] expression which means that fundamental research is very important in politics, history and science. Without fundamental research there is no good knowledge about questions. Many people only think about questions as other people think. Ad fontes means that it is important to elaborate and study older document to have a sound meaning.
 
-==External Links ==
-
-
-[http://www.thelatinlibrary.com/classics Classics]
+==External links ==
+*[http://www.thelatinlibrary.com/classics Classics]
 
 
 {{substub}}
