--- a/wiki/addicted.wikitext
+++ b/wiki/addicted.wikitext
@@ -1,1 +1,5 @@
-Present tense of verb [[addict]].  A person addicted to a substance is physically or psychologically dependent on that substance.
+==English==
+===Verb===
+'''addicted'''
+
+#past tense of verb [[addict]].  A person addicted to a substance is physically or psychologically dependent on that substance.
