--- a/wiki/scapegoat.wikitext
+++ b/wiki/scapegoat.wikitext
@@ -13,5 +13,8 @@
 ====Etymology====
 First attested 1530, coined by Tyndale.
 
+====Encyclopedia====
+Comprehensive article about [[w:scapegoat|scapegoat]] in Wikipedia.
+
 ===Translations===
 *[[Russian]]: [[козел отпущения]] ''m''
