--- a/wiki/fairy.wikitext
+++ b/wiki/fairy.wikitext
@@ -2,10 +2,16 @@
 '''fairy''' (plural: [[fairies]])
 
 # A mythical being, usually small, slim, often with gauzy wings
-# A [[male]] [[homosexual]].
+# A [[male]] [[homosexual]]
 
 ====Alternative spelling====
 '''[[faery]]''' (''archaic'')
+
+====Etymology====
+[[Middle English]] fairie, from [[Old French]] [[faerie]], from [[fae]], [[fairy]], from [[Vulgar Latin]] [[Fāta]], ''goddess of fate'', from [[Latin]] [[fātum]], [[fate]]
+
+====Synonyms====
+[[faerie]], [[faery]], [[sprite]] 
 
 ====Translations====
 *Catalan: [[fada]] ''f'' (1)
@@ -19,6 +25,7 @@
 *{{de}}: [[Fee]] ''f''
 *Italian: [[fata]] ''f''
 *Japanese: [[妖精]]
+*[[Russian]]: [[фея]] ''f'', [[волшебница]] ''f'' (1), [[гомик]], [[мужеложец]], [[содомит]] (2)
 *[[Slovak]]: [[víla]] ''f'' (1), [[teploš]] (2)
 *Spanish: [[hada]] ''f''
 *{{sv}}: [[fe]] ''c'' (1)
@@ -26,6 +33,10 @@
 ====Related terms====
 *[[fairy floss]]
 *[[fairy godmother]]
-*[[fairy tale]], [[fairytale]]
+*[[fairy lilly]]
+*[[fairy primrose]]
+*[[fairy ring]]
+*[[fairy shrimp]]
+*[[fairy tale]], [[fairy-tale]], [[fairytale]]
 *[[tooth fairy]]
 *[[water fairy]]
