--- a/wiki/%E6%9A%97.wikitext
+++ b/wiki/%E6%9A%97.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[晻]]
+* '''Alternate form''': [[晻]], [[闇]] (different character in Japan)
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 72''': [[Wiktionary:Chinese radical index 日|日]]+9 strokes
 
@@ -32,6 +32,75 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': am3, ngam3
 
+* '''Style''': [[Simplified Chinese]] 
+** '''[[Traditional Chinese|Traditional]] equivalent''': [[晻]], [[闇]]
+
+===Compounds===
+*[[暗暗]]
+*[[安坝]]
+*[[暗堡]]
+*[[暗藏]]
+*[[暗查]]
+*[[暗娼]]
+*[[暗场]]
+*[[暗潮]]
+*[[暗沉沉]], [[暗沉沉的]]
+*[[暗处]]
+*[[暗淡]]
+*[[暗道]]
+*[[暗地里]]
+*[[暗度陈仓]]
+*[[暗房]]
+*[[暗访]]
+*[[暗沟]]
+*[[暗害]]
+*[[暗含]]
+*[[暗号]], [[暗号儿]]
+*[[暗合]]
+*[[暗河]]
+*[[暗黑]]
+*[[暗花儿]]
+*[[暗话]]
+*[[暗火]]
+*[[暗疾]]
+*[[暗记]]
+*[[暗记儿]]
+*[[暗间儿]]
+*[[暗箭]]
+*[[暗礁]]
+*[[暗井]]
+*[[暗亏]]
+*[[暗里]]
+*[[暗流]]
+*[[暗楼子]]
+*[[暗码]], [[暗码儿]]
+*[[暗门子]]
+*[[暗盘]], [[暗盘儿]]
+*[[暗泣]]
+*[[暗器]]
+*[[暗枪]]
+*[[暗渠]]
+*[[暗色]]
+*[[暗杀]]
+*[[暗沙]], [[暗砂]]
+*[[暗伤]]
+*[[暗哨]], [[暗哨儿]]
+*[[暗射]]
+*[[暗射地图]]
+*[[暗示]]
+*[[暗事]]
+*[[暗室]]
+*[[暗送秋波]]
+*[[暗算]]
+*[[暗锁]]
+*[[暗滩]]
+*[[暗探]]
+*[[暗无天日]]
+*[[暗息]]
+*[[暗喜]]
+*[[暗匣]]
+*[[暗下]]
+
 * '''Other info''': 
 
 ----
@@ -41,6 +110,22 @@
 * '''Readings'''
 ** '''[[On]]''': [[あん]] (an)
 ** '''[[Kun]]''': [[くらい]] (kurai), [[やみ]] (yami)
+
+===Compounds===
+*[[暗雲]]
+*[[暗記]]
+*[[暗号]]
+*[[暗黒]]
+*[[暗殺]]
+*[[暗示]]
+*[[暗室]]
+*[[暗礁]]
+*[[暗澹]]
+*[[暗中模索]]
+*[[暗転]]
+*[[暗黙]]
+*[[暗躍]]
+*[[暗闇]]
 
 * '''Other info''':  
 
