--- a/wiki/fairy_shrimp.wikitext
+++ b/wiki/fairy_shrimp.wikitext
@@ -1,4 +1,4 @@
-[[Image:fairyshrimp.jpg]]
+[[Image:fairyshrimp.gif]]
 ==English==
 ====Noun====
 #Small [[freshwater]] [[branchiopod]] having a [[transparent]] body with many [[appendage]]s; swims on its back
