--- a/wiki/fairy_shrimp.wikitext
+++ b/wiki/fairy_shrimp.wikitext
@@ -1,4 +1,4 @@
-[[Image:fairyshrimp.gif|thumb|250px|none|fairy shrimp]]
+[[Image:fairyshrimp.gif|thumb|fairy shrimp]]
 ==English==
 ====Noun====
 #Small [[freshwater]] [[branchiopod]] having a [[transparent]] body with many [[appendage]]s; swims on its back
