--- a/wiki/%E6%9A%97.wikitext
+++ b/wiki/%E6%9A%97.wikitext
@@ -100,6 +100,17 @@
 *[[暗喜]]
 *[[暗匣]]
 *[[暗下]]
+*[[暗线]]
+*[[暗线光谱]]
+*[[暗箱]]
+*[[暗笑]]
+*[[暗夜]]
+*[[暗影]]
+*[[暗语]]
+*[[暗喻]]
+*[[暗中]]
+*[[暗转]]
+*[[暗自]]
 
 * '''Other info''': 
 
