--- a/wiki/%E7%9B%8E.wikitext
+++ b/wiki/%E7%9B%8E.wikitext
@@ -11,15 +11,15 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#cup
-*# pot
-*# bowl
-*# abundant
+*# [[cup]]
+*# [[pot]]
+*# [[bowl]]
+*# [[abundant]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,16 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ong3
 
+===Compounds===
+*[[盎格鲁萨克逊人]]
+*[[盎然]]
+*[[盎司]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[おう]] (ō)
