--- a/wiki/%E9%BB%AF.wikitext
+++ b/wiki/%E9%BB%AF.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#dark, black
-*# sullen, dreary
+*# [[dark]], [[black]]
+*# [[sullen]], [[dreary]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,19 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': am2
 
+===Compounds===
+*[[黯黯]]
+*[[黯淡]]
+*[[黯黑]]
+*[[黯然]]
+*[[黯然失色]]
+*[[黯然销魂]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[あん]] (an)
