--- a/wiki/appendage.wikitext
+++ b/wiki/appendage.wikitext
@@ -4,5 +4,10 @@
 #A natural [[prolongation]] or [[projection]] from a part of any [[organism]]
 #A part that is joined to something larger
 
-====Translation=====
+====Synonyms====
+#[[etremity]], [[member]]
+#[[outgrowth]], [[process]]
+
+
+====Translation====
 *[[Russian]]: [[придаток]] ''m'', [[привесок]] ''m'', [[дополнение]] ''n''
