--- a/wiki/toadstool.wikitext
+++ b/wiki/toadstool.wikitext
@@ -1,8 +1,15 @@
+==English==
+===Pronunciation===
+*SAMPA: /"t@Ud%stu:l/
 ===Noun===
 '''toadstool'''
 
-====Translations====
+# {{stub}}
 
+====Translations====
+*French: [[champignon]] ''m''
+*Italian: [[fungo]] ''m''
+*Japanese: [[茸]] ([[きのこ]], kinoko)
 *[[Slovene]]: [[mušnica]] ''f''
 
 ===See also===
