--- a/wiki/%E8%82%A2.wikitext
+++ b/wiki/%E8%82%A2.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#human limbs
-*# animal feet
+*# human [[limb]]s
+*# animal [[feet]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,21 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ji1
 
+===Compounds===
+*[[肢体]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[し]] (shi)
 ** '''[[Kun]]''': [[てあし]] (teashi)
+
+===Compounds===
+*[[肢体]]
 
 * '''Other info''':  
 
