--- a/wiki/carta.wikitext
+++ b/wiki/carta.wikitext
@@ -3,8 +3,16 @@
 '''carta''' ''f'' (''countable and uncountable''; ''plural'' '''carte''')
 
 #[[paper]] (''the material'')
-#[[map]]
+#[[map]] (abbreviation of ''carta geografica'')
 #[[menu]]
+
+===Synonym===
+*[[pianta]] (2)
+
+===Related terms===
+*[[cartaio]]
+*[[cartella]]
+*[[cartolina]]
 
 ----
 
