--- a/wiki/special.wikitext
+++ b/wiki/special.wikitext
@@ -5,7 +5,8 @@
 
 ===Adjective===
 '''special''' (more special, most special)
-
+====Translations====
+*Turkish: Özel
 ====Related terms====
 *[[specialisation]], [[specialization]]
 *[[specialise]], [[specialize]]
