--- a/wiki/%E8%82%A2%E4%BD%93.wikitext
+++ b/wiki/%E8%82%A2%E4%BD%93.wikitext
@@ -1,2 +1,13 @@
-Japanese reading: 
-したい (n): limbs, members, body
+==Chinese==
+===Noun===
+[[肢]][[体]] (zhiti)
+
+# [[limb]]s
+
+----
+==Japanese==
+===Noun===
+[[肢]][[体]] (したい, shitai)
+
+# [[limb]]s, [[member]]s, [[body]]
+# [[figure]]
