--- a/wiki/special.wikitext
+++ b/wiki/special.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 '''special''' (more special, most special)
 ====Translations====
-*Turkish: Özel
+*Turkish: özel
 ====Related terms====
 *[[specialisation]], [[specialization]]
 *[[specialise]], [[specialize]]
