--- a/wiki/special.wikitext
+++ b/wiki/special.wikitext
@@ -1,12 +1,20 @@
+==English==
 ===Pronunciation===
-*[[w:AHD|AHD]]: spĕsh'əl
 *[[w:IPA|IPA]]: /ˈspeʃəl/
 *[[w:SAMPA|SAMPA]]: /"speS@l/
+*[[w:AHD|AHD]]: spĕsh'əl
 
 ===Adjective===
 '''special''' (more special, most special)
+
+
 ====Translations====
-*Turkish: özel
+*Chinese: [[特别的]], [[专门的]]
+*French: [[spécial]]
+*Italian: [[speciale]]
+*Japanese: [[特別な]]
+*Turkish: [[özel]]
+
 ====Related terms====
 *[[specialisation]], [[specialization]]
 *[[specialise]], [[specialize]]
