Hindi <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -32,6 +32,9 @@
 *:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
+*{{hi}}:
+*:<font size="+1">आपका नाम क्या है</font> ? (''aapkaa naam kyaa he'') (formal)
+*:<font size="+1">तुम्हारा नाम क्या है</font> ? (''tumhara naam kyaa he'') (casual)
 *Italian:
 *:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
 *Japanese:
