Typo - Change "etremity" to "extremity" <appendage#65773>

--- a/wiki/appendage.wikitext
+++ b/wiki/appendage.wikitext
@@ -5,9 +5,8 @@
 #A part that is joined to something larger
 
 ====Synonyms====
-#[[etremity]], [[member]]
+#[[extremity]], [[member]]
 #[[outgrowth]], [[process]]
-
 
 ====Translation====
 *[[Russian]]: [[придаток]] ''m'', [[привесок]] ''m'', [[дополнение]] ''n''
