--- a/wiki/fungo.wikitext
+++ b/wiki/fungo.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''fungi''' ''m'' (''plural'': [[funghi]])
 
-# [[mashroom]], [[toadstool]]
+# [[mushroom]], [[toadstool]]
 
 ===Related terms===
 *[[funghetto]]
