--- a/wiki/squalor.wikitext
+++ b/wiki/squalor.wikitext
@@ -7,4 +7,4 @@ From the [[French]] ''squalere'', "to be [[foul]] or [[filthy]].
 
 ===Quotes===
 * ''The heterogenous indigent multitude, everywhere wearing nearly the same aspect of '''squalor'''''. -- Taylor
-* ''To bring this sort of '''squalor''' among the upper classes.''
+* ''To bring this sort of '''squalor''' among the upper classes.'' -- Dickens
