--- a/wiki/char.wikitext
+++ b/wiki/char.wikitext
@@ -1,7 +1,24 @@
 ==English==
 
 ===Noun===
+#Any of several small-scaled trout; charr
+#: '''"Among other native delicacies, they give you fresh [[char]]"''
+#A human female employed to do housework; cleaning lady
+#:''"I had to scrub the kitchen today, because the [[char]] couldn't come"''
+#A charred substance
 
-'''char'''
+====Synonyms====
+#[[charr]]
+#[[charwoman]], [[cleaning lady]], [[cleaning woman]]
+#[[charcoal]]
 
-#Alt. of Charr
+===Verb===
+#burn to [[charcoal]]
+#burn [[slightly]] and [[superficially]] so as to affect color
+
+====Synonyms====
+#[[coal]]
+#[[blacken]], [[scorch]], [[sear]], [[singe]]
+
+====Translations====
+*[[Russian]]: [[обугливать]] (1); [[чернить]], [[коптить]], [[обжигать]], [[опалять]] (2)
