--- a/wiki/char.wikitext
+++ b/wiki/char.wikitext
@@ -12,6 +12,9 @@
 #[[charwoman]], [[cleaning lady]], [[cleaning woman]]
 #[[charcoal]]
 
+====Translations====
+*[[Russian]]: [[ручьевая форель]] ''f'', [[форель]] ''f'', [[пеструшка]] ''f'' (1); [[уборщица]] ''f'' (2); [[уголь]] ''m'' (3)
+
 ===Verb===
 #burn to [[charcoal]]
 #burn [[slightly]] and [[superficially]] so as to affect color
@@ -22,3 +25,5 @@
 
 ====Translations====
 *[[Russian]]: [[обугливать]] (1); [[чернить]], [[коптить]], [[обжигать]], [[опалять]] (2)
+
+===Etymology===
