Gujarati: [[મારુ નામ ... છે]] <my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -27,6 +27,8 @@
 *:[[Ich heiße ...]] ''I'm called ...''
 *:[[Ich bin der ...]] ''m'', [[Ich bin die ...]] ''f''
 *:(''literal translation'') Mein Name ist ...
+*{{gu}}
+*:[[મારુ નામ ... છે]] ''My name ... is''
 *Hebrew:
 *:[[שמי ...]] (shmi ...)
 *[[Hindi]]:
