Gujarati: [[મારુ નામ ... છે]] <my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -28,7 +28,7 @@
 *:[[Ich bin der ...]] ''m'', [[Ich bin die ...]] ''f''
 *:(''literal translation'') Mein Name ist ...
 *{{gu}}
-*:[[મારુ નામ ... છે]] ''My name ... is''
+*:[[મારુ નામ ... છે]] (meru nām ... tche) ''My name ... is''
 *Hebrew:
 *:[[שמי ...]] (shmi ...)
 *[[Hindi]]:
