--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -30,11 +30,13 @@
 *German: 
 *:[[Wie heißen Sie?]] (formal) (''How are you called?'')
 *:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
+*{{gu}}
+*:[[
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
 *{{hi}}:
-*:<font size="+1">आपका नाम क्या है</font> ? (''aapkaa naam kyaa he'') (formal)
-*:<font size="+1">तुम्हारा नाम क्या है</font> ? (''tumhara naam kyaa he'') (casual)
+*:[[आपका नाम क्या है ?]] (''āpkā nām kyā he'') (formal) ''Your name what is ?''
+*:[[तुम्हारा नाम क्या है ?]] (''tumhārā nām kyā he'') (casual) ''Your name what is ?''
 *Italian:
 *:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
 *Japanese:
