Gujarati <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -31,12 +31,13 @@
 *:[[Wie heißen Sie?]] (formal) (''How are you called?'')
 *:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
 *{{gu}}
-*:[[
+*:[[તમારુ નામ શુ છે ?]] (tamāru nām su tche) (formal) (''Your name what is ?'')
+*:[[તારુ નામ શુ છે ?]] (tāru nām su tche) (casual) (''Your name what is ?'')
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
 *{{hi}}:
-*:[[आपका नाम क्या है ?]] (''āpkā nām kyā he'') (formal) ''Your name what is ?''
-*:[[तुम्हारा नाम क्या है ?]] (''tumhārā nām kyā he'') (casual) ''Your name what is ?''
+*:[[आपका नाम क्या है ?]] (āpkā nām kyā he) (formal) ''Your name what is ?''
+*:[[तुम्हारा नाम क्या है ?]] (tumhārā nām kyā he) (casual) ''Your name what is ?''
 *Italian:
 *:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
 *Japanese:
