--- a/wiki/zebra_crossing.wikitext
+++ b/wiki/zebra_crossing.wikitext
@@ -15,7 +15,7 @@ Are these for "zebra crossing" or just "pedestrian crossing"?
 *French: [[passage clouté]] ''m'', [[passage piéton]] ''m''
 *German: [[Zebrastreifen]] ''m''
 *Romanian: [[trecere de pietoni]] ''f'', [[zebră]] ''f''
-*Russian: [[пешеходный переход]] ''m'', [[полосатый переход]] ''m'', [[зебра]] ''f''
+*Russian: [[пешеходный переход]] ''m'', [[полосатый переход]] ''m'', [[зебра]] ''f'', [[зебра переход]] ''m''
 *Swedish: [[övergångsställe]]
 
 ===See also===
