--- a/wiki/ager.wikitext
+++ b/wiki/ager.wikitext
@@ -26,3 +26,5 @@ Cognates include English [[acre]].
 ===Verb===
 <b>ager</b> [ag-/act-] [-ig-/-act-]
 #to [[act]], to [[be]] [[doing]]
+
+[[pl:ager]]
