interwiki +pl <alter#33645>

--- a/wiki/alter.wikitext
+++ b/wiki/alter.wikitext
@@ -9,8 +9,11 @@
 *Bulgarian: [[променям]] (1), [[модифицирам]] (1)
 *Italian: [[cambiare]]
 *Japanese: [[変える]] (かえる, kaeru), [[変更する]] (へんこうする, henkousuru)
+*Polish: [[zmieniać]], [[wpływać]] [[na]] [[coś]] (1)
 *[[Romanian]]: [[modifica]], [[schimba]], [[altera]]
 
 ====Homophone====
 
 *[[altar]]
+
+[[pl:alter]]
