--- a/wiki/package.wikitext
+++ b/wiki/package.wikitext
@@ -8,7 +8,7 @@
 
 ====Translations====
 *Finnish: [[pakkaus]] (1, 2)
-*Swedish: [[paket]] (2)
+*Swedish: [[paket]] (1, 2) [[paketering]] (3)
 
 ==Verb==
 '''to package'''
