--- a/wiki/acte.wikitext
+++ b/wiki/acte.wikitext
@@ -1,5 +1,16 @@
-==[[Latin]]==
-===[[noun]]===
+==French==
+===Noun===
+'''acte''' ''m''
+
+# [[act]]
+
+===Related terms===
+*[[action]]
+*[[agir]]
+
+----
+==Latin==
+===Noun===
 '''acte''' ''f'' (Plural: [[actae]], Accusative: [[acten]], Genitive: [[actes]], Ablative: [[acte]])
 
 #a dwarf-elder
