--- a/wiki/lacus.wikitext
+++ b/wiki/lacus.wikitext
@@ -3,7 +3,6 @@
 '''lacus''' ''m'' ''[[Wiktionary Appendix:Latin fourth declension|4th declension]]''
 
 #a [[lake]]
-===Related Words===
+===Related terms===
 *[[lacuna]]
-
 [[pl:lacus]]
