+de <give-away shop#58239>

--- a/wiki/give-away_shop.wikitext
+++ b/wiki/give-away_shop.wikitext
@@ -5,4 +5,5 @@
 ====Translations====
 * Dutch: [[weggeefwinkel]]
 * French: [[magasin gratuit]]
+* German: [[Umsonstladen]]
 * Norwegian: [[gratis butikk]]
