--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -5,7 +5,7 @@ Arabic [[الله]] (allāh), from [[الـ]] (al-) "the" + [[اله|إِله]] 
 ===Proper noun===
 '''Allah'''
 
-# Arabic word for [[God]], often used in the context of [[Islam]].
+# The name of the Arabic deity of the [[Muslim]] [[monotheistic]] [[religion]].
 
 ====Translations====
 *Arabic: [[الله]] (ʾAllāh)
