+it <give-away shop#58239>

--- a/wiki/give-away_shop.wikitext
+++ b/wiki/give-away_shop.wikitext
@@ -6,5 +6,6 @@
 * Dutch: [[weggeefwinkel]]
 * French: [[magasin gratuit]]
 * German: [[Umsonstladen]]
+* Italian: [[freeshop]]
 * Norwegian: [[gratis butikk]]
 * Spanish: [[tiendra gratis]]
