--- a/wiki/science.wikitext
+++ b/wiki/science.wikitext
@@ -8,11 +8,11 @@ From [[Latin]] ''[[scientia]]'', '''[[knowledge]]''', noun formed from present p
 
 Sometimes uncountable
 
+#The act and embodiment of performing the [[scientific method]] in order to discover empirically proven [[truth]].
 #Organized body of knowledge; any particular art or discipline
 #A study of a particular discipline, usually involving measuring something, prevention, or causation.
 #Those who carry out this study, referred to as a group
 #: "Modern science today tells us that...."
-#The act and embodiment of performing the [[scientific method]] in order to discover empirically proven [[truth]]. <!-- created by LaughingMan -->
 
 ====Related terms====
 *[[scientific]]
