--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -21,7 +21,12 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 #: ''The legal restrictions of a marriage, including gender of persons, number of persons, age of persons and other specifications differ depending on the governing bodies chosen restrictions.''
 # A joining of two parts.
 
-====See also====
+====Translations====
+*French: [[mariage]] ''m''
+*Italian: [[matrimonio]] ''m''
+*Japanese: [[結婚]], [[婚姻]]
+
+===See also===
 *[[w:Marriage|Marriage]] — Wikipedia
 *[[marriageable]]
 *[[marry]]
