--- a/wiki/Tetragrammaton.wikitext
+++ b/wiki/Tetragrammaton.wikitext
@@ -1,1 +1,2 @@
-'''Tetragrammaton'''(noun):The four hebrew letters of God's Name,'''[[Jehovah]]''' or '''[[Yahweh]]'''
+==Noun==
+The four hebrew letters of God's Name,'''[[Jehovah]]''' or '''[[Yahweh]]'''
