--- a/wiki/slanderer.wikitext
+++ b/wiki/slanderer.wikitext
@@ -1,1 +1,2 @@
-'''slanderer'''(noun) one slanders or defames the name or reputation of a another person.
+==Noun==
+One  who slanders or defames the name or reputation of a another person.
