--- a/wiki/agnostic.wikitext
+++ b/wiki/agnostic.wikitext
@@ -1,5 +1,5 @@
 ===Etymology===
-From Greek prefix '''[[a-]]''', ''not'', + '''[[gnostic]]''', ''knowing''
+From Greek prefix '''[[a-]]''', ''not'', + '''gnostic''', ''knowing''
 
 ===Noun===
 '''agnostic''', plural '''[[agnostics]]'''
