--- a/wiki/agnostic.wikitext
+++ b/wiki/agnostic.wikitext
@@ -2,7 +2,7 @@
 From Greek prefix '''[[a-]]''', ''not'', + '''gnostic''', ''knowing''
 
 ===Noun===
-'''agnostic''', plural '''[[agnostics]]'''
+'''agnostic''', plural '''agnostics'''
 
 #A person who believes nothing can be known about the existence of a God
 
