/* Noun */ <fairy primrose#65767>

--- a/wiki/fairy_primrose.wikitext
+++ b/wiki/fairy_primrose.wikitext
@@ -1,3 +1,3 @@
 ==English==
 ===Noun===
-*A [[Chinese ornamental]] ([[Primula malcoides]]) grown for its large, rose to pink flowers grouped in [[many-flowered]] [[umbel]]s
+#A [[Chinese ornamental]] ([[Primula malcoides]]) grown for its large, rose to pink flowers grouped in [[many-flowered]] [[umbel]]s.
