/* Noun */added antonym <theist#61015>

--- a/wiki/theist.wikitext
+++ b/wiki/theist.wikitext
@@ -2,6 +2,6 @@
 
 ===Noun===
 
-'''theist'''
-
-#One who believes in the existence of a God; especially, one who believes in a personal God; -- opposed to atheist.
+#One who believes in the existence of a God; ''especially'', one who believes in a personal God. 
+==Antonym==
+[[atheist]]
