/* Translations */ added spanish <corn#44713>

--- a/wiki/corn.wikitext
+++ b/wiki/corn.wikitext
@@ -11,3 +11,4 @@
 *Hebrew: [[תירס]] ''m'' (1), [[דגן]] ''m'' (2)
 *Romanian: [[porumb]] ''m'' (1) [[cucuruz]] ''m'' (1), [[păpuşoi]] ''m'' (1)
 *Slovak: [[kukurica#Slovak|kukurica]] ''f'' (1)
+*Spanish:[[maíz]]
