--- a/wiki/rabid.wikitext
+++ b/wiki/rabid.wikitext
@@ -11,5 +11,4 @@ From the [[Latin]] ''rabidus'', from ''rabere'', or to [[rave]].
 
 ===Quotes===
 * ''The '''rabid'' flight''<br>
-:Of winds that ruin ships.
-:::Chapman
+:Of winds that ruin ships. -- Chapman
