--- a/wiki/rabid.wikitext
+++ b/wiki/rabid.wikitext
@@ -10,5 +10,5 @@ From the [[Latin]] ''rabidus'', from ''rabere'', or to [[rave]].
 # Of or pertaining to rabies, or [[hydrophobia]]; as, ''rabid'' [[virus]].
 
 ===Quotes===
-* ''The '''rabid'' flight''<br>
-:Of winds that ruin ships. -- Chapman
+* ''The '''rabid''' flight''
+:''Of winds that ruin ships''. -- Chapman
