--- a/wiki/rabies.wikitext
+++ b/wiki/rabies.wikitext
@@ -3,4 +3,4 @@
 # A [[viral]] [[disease]] that causes acute [[encephalitis]] in animals and people.
 
 ===Translations===
-:Hebrew: [[כלבת]] (''f''.)
+:'''Hebrew:''' [[כלבת]] (''f''.)
