Gujarati prononciation <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -31,8 +31,8 @@
 *:[[Wie heißen Sie?]] (formal) (''How are you called?'')
 *:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
 *{{gu}}
-*:[[તમારુ નામ શું છે ?]] (tamāru nām su tche) (formal) (''Your name what is ?'')
-*:[[તારુ નામ શું છે ?]] (tāru nām su tche) (casual) (''Your name what is ?'')
+*:[[તમારુ નામ શું છે ?]] (tamāru nām sun̩ tche) (formal) (''Your name what is ?'')
+*:[[તારુ નામ શું છે ?]] (tāru nām sun̩ tche) (casual) (''Your name what is ?'')
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
 *{{hi}}:
