/* Transitive verb */ <rehash#65799>

--- a/wiki/rehash.wikitext
+++ b/wiki/rehash.wikitext
@@ -1,7 +1,6 @@
 =={{En}}==
 ===Transitive verb===
-# To [[hash]] over again; to prepare or use again; as, to ''rehash'' old
-arguments.
+# To [[hash]] over again; to prepare or use again; as, to ''rehash'' old arguments.
 
 ===Noun===
 # Something hashed over, or made up from old materials.
