--- a/wiki/rehibition.wikitext
+++ b/wiki/rehibition.wikitext
@@ -1,3 +1,3 @@
 =={{En}}==
-===Noun==
+===Noun===
 # The [[return]]ing of a thing [[purchase]]d to the [[seller]], on the ground of [[defect]] or [[fraud]].
