--- a/wiki/reservoir.wikitext
+++ b/wiki/reservoir.wikitext
@@ -2,3 +2,6 @@
 ===Noun===
 # A place where anything is kept in [[store]]; especially, a place where [[water]] is collected and kept for use when wanted, as to supply a [[fountain]], a [[canal]], or a [[city]] by means of [[aqueduct]]s.
 # A small intercellular space, often containing [[resin]], [[essential oil]], or some other [[secreted]] [[matter]].
+
+===See also===
+: [[Receiving reservoir]]
