--- a/wiki/romaunt.wikitext
+++ b/wiki/romaunt.wikitext
@@ -3,5 +3,5 @@
 # A romantic story in verse; as, the '''''Romaunt''' of the Rose''.
 
 ===Quotes===
-:''O, hearken, loving hearts and bold,
-:Unto my wild '''romaunt'''''. -- Elizabeth Browning
+:''O, hearken, loving hearts and bold,''
+:''Unto my wild '''romaunt'''''. -- Elizabeth Browning
