--- a/wiki/romaunt.wikitext
+++ b/wiki/romaunt.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Noun===
-# A romantic story in verse; as, the '''''Romaunt''' of the Rose''.
+# A [[romantic]] [[story]] told in [[verse]]; as, the '''''Romaunt''' of the Rose''.
 
 ===Quotes===
 :''O, hearken, loving hearts and bold,''
