--- a/wiki/flour.wikitext
+++ b/wiki/flour.wikitext
@@ -15,6 +15,7 @@
 *Finnish: [[jauho]], (''plural'' [[jauhot]])
 *French: [[farine]] ''f''
 *German: [[Mehl]] ''n''
+*Hebrew: [[קמח]] ''m''
 *Italian: [[farina]] ''f''
 |}
 | width=1% |
