--- a/wiki/wheat.wikitext
+++ b/wiki/wheat.wikitext
@@ -11,6 +11,7 @@
 *[[Frisian]]: [[weet]]
 *German: [[Weizen]] ''m''
 *[[Hausa]]: [[álkámà]]
+*[[Hebrew]]: [[חיטה]] ''f''
 *Italian: [[frumento]] ''m''
 *Portuguese: [[trigo]] ''m''
 *Serbian: [[pšenica]] ''m''
