--- a/wiki/barley.wikitext
+++ b/wiki/barley.wikitext
@@ -11,6 +11,7 @@
 *French: [[orge]] ''m''
 *German: [[Gerste]] ''f''
 *Greek: [[κριθάρι]] ''n''
+*Hebrew: [[שעורה]] ''f''
 *Italian: [[orzo]] ''m''
 *Japanese: [[オオムギ]]
 *Korean: [[보리]]
