--- a/wiki/pantheon.wikitext
+++ b/wiki/pantheon.wikitext
@@ -10,4 +10,4 @@ From the greek word ''pantheion'', a shrine to all the gods.
 #The circular temple dedicated to all the gods in 27 BC in Rome. 
 
 ===See Also===
-[[w:Pantheon|Pantheon]]
+*Wikipedia article on the [[w:Pantheon|Pantheon]]
