--- a/wiki/morph.wikitext
+++ b/wiki/morph.wikitext
@@ -1,14 +1,11 @@
 == Definition ==
 
 <b>morph</b> (<i>verb</i>)
-# (<i>Coll.</i>) To change from one shape to another through a continuous action.
-
-:Ex.  <i>Odo on DS9 can <b>morph</b> into anything because he's a [[shape shifter]]</i>
+# (<i>Coll.</i>) To change from one form (often the form of shape) to another.
 
 == Etymology ==
 
-From <i>morph-</i> (shape)
-
+From <i>morph-(form)</i> (form)
 
 == Pronunciation ==
 
