--- a/wiki/STFU.wikitext
+++ b/wiki/STFU.wikitext
@@ -1,1 +1,6 @@
-Shut the fuck up
+{{-en-}}
+{{-pron-}}
+*[[IPA]]: /<tt style="font-family:Code2000,Arial Unicode MS,Lucida Sans Unicode;">stɪ.fju</tt>/, /<tt style="font-family:Code2000,Arial Unicode MS,Lucida Sans Unicode;">stɪf.ju</tt>/
+{{-acronym-}}
+'''STFU'''
+# Shut the fuck up.
