--- a/wiki/rubber.wikitext
+++ b/wiki/rubber.wikitext
@@ -3,14 +3,18 @@
 
 #[[pliable]] [[material]] derived from the [[sap]] of the rubber tree
 #[[synthetic]] materials with the same [[properties]] as natural rubber
-#(''Aust'') an [[eraser]] (from: to [[rub]])
-#(''Slang'') a [[condom]]
+#an [[eraser]] (from: to [[rub]]) (''UK'')
+#a [[condom]] (''Aust: slang'')
+
+==Synonyms==
+see [[WikiSaurus:condom]]
 
 ====Translations====
 *Dutch: rubber ''n'' (1), [[kunstrubber]] ''n'' (2), [[gom]] ''m'' (3), [[condoom]] ''m'' (4)
 *French: [[caoutchouc]] ''m'' (1), [[capote]] ''f'' (4)
 
 ----
+
 ==Dutch==
 ===Noun===
 '''rubber''' ''n''
