--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -1,1 +1,8 @@
-see [[durex]] - in Australia this brand name has been converted into a generic name for sticky/adhesive tape.
+==English==
+
+==Etymology==
+'''Durex''' is a brand name for many products. The usage of this brand name as a generic name has been adopted differently in different localities.
+
+==Noun==
+*sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
+*condom (''UK: - Durex is one popular brand, and is often used as the generic name)
