--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ==Etymology==
-'''Durex''' is a brand name for many products. The usage of this brand name as a generic name has been adopted differently in different localities.
+'''Durex''' is a brand name for many products. The usage of this brand name as a generic name has been adopted differently in different localities. ''Warning: do not confuse these usages as it can be quite embarrassing!''
 
 ==Noun==
 *sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
