--- a/wiki/cattle.wikitext
+++ b/wiki/cattle.wikitext
@@ -6,6 +6,7 @@
 === Noun ===
 '''cattle''' (plural)
 # four-legged [[ruminant]] [[mammal]]s of the bovine genus. Male: [[bull]] (uncastrated), [[steer]] (castrated).  Female: [[cow]]. Young: [[calf]]. Young male: [[bullock]]. Young female: [[heifer]].
+# (''Rare.'') [[beef]].
 
 ====Scientific name====
 *[[Bos taurus]]
