--- a/wiki/marriage.wikitext
+++ b/wiki/marriage.wikitext
@@ -22,9 +22,11 @@ Middle English '''[[mariage]]''', from Old French '''[[mariage]]''', from '''[[m
 # A joining of two parts.
 
 ====Translations====
+*Chinese characters: [[婚]], [[姻]]
+*Chinese: [[结婚]] (jiehun), [[婚姻]] (hunyin)
 *French: [[mariage]] ''m''
 *Italian: [[matrimonio]] ''m''
-*Japanese: [[結婚]], [[婚姻]]
+*Japanese: [[結婚]] (けっこん), [[婚姻]] (こんいん)
 
 ===See also===
 *[[w:Marriage|Marriage]] — Wikipedia
