--- a/wiki/%E5%A9%9A.wikitext
+++ b/wiki/%E5%A9%9A.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#get married
-*# marriage, wedding
+*#get [[marry|married]]
+*# [[marriage]], [[wedding]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,44 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fan1
 
+===Compounds===
+*[[婚变]]
+*[[婚假]]
+*[[婚嫁]]
+*[[婚检]]
+*[[婚礼]]
+*[[婚恋]]
+*[[婚龄]]
+*[[婚配]]
+*[[婚期]]
+*[[婚娶]]
+*[[婚丧]]
+*[[婚纱]]
+*[[婚生子女]]
+*[[婚事]]
+*[[婚书]]
+*[[婚俗]]
+*[[婚外恋]]
+*[[婚姻]]
+*[[婚姻法]]
+*[[婚姻介绍所]]
+*[[婚约]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こん]] (kon)
 ** '''[[Kun]]''': [[えんぐみ]] (engumi)
+
+===Compounds===
+*[[婚姻]]
+*[[婚期]]
+*[[婚約]]
+*[[婚礼]]
 
 * '''Other info''':  
 
