--- a/wiki/step.wikitext
+++ b/wiki/step.wikitext
@@ -4,6 +4,10 @@
 
 ===Noun===
 '''step''' ([[steps]])
+#forward movement with legs, from one foot to the other 
+
+==Synonyms==
+[[stride]]
 
 ====Translations====
 *Chinese Characters: [[步]]
