--- a/wiki/%E8%9D%BE.wikitext
+++ b/wiki/%E8%9D%BE.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': lizard
+* '''Common Meaning''': [[lizard]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,9 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[蠑]]
+
+===Compounds===
+*[[蝾螈]]
 
 * '''Other info''': 
 
