--- a/wiki/%E8%8D%A3.wikitext
+++ b/wiki/%E8%8D%A3.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#glory, honor
-*# flourish, prosper
+*# [[glory]], [[honour]]
+*# [[flourish]], [[prosper]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,27 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[榮]]
+
+===Compounds===
+*[[荣宠]]
+*[[荣达]]
+*[[荣光]]
+*[[荣归]]
+*[[荣华]]
+*[[荣获]]
+*[[荣枯]]
+*[[荣利]]
+*[[荣名]]
+*[[荣任]]
+*[[荣辱]]
+*[[荣升]]
+*[[荣退]]
+*[[荣衔]]
+*[[荣幸]]
+*[[荣耀]]
+*[[荣膺]]
+*[[荣誉]]
+*[[荣誉军人]]
 
 * '''Other info''': 
 
