--- a/wiki/%E6%81%A9.wikitext
+++ b/wiki/%E6%81%A9.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': kindness, mercy, charity
+* '''Common Meaning''': [[kindness]], [[mercy]], [[charity]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,15 +26,46 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yan1
 
+===Compounds===
+*[[恩爱]]
+*[[恩宠]]
+*[[恩仇]]
+*[[恩赐]]
+*[[恩德]]
+*[[恩典]]
+*[[恩公]]
+*[[恩惠]]
+*[[恩将仇报]]
+*[[恩情]]
+*[[恩人]]
+*[[恩荣]]
+*[[恩赦]]
+*[[恩师]]
+*[[恩同再造]]
+*[[恩物]]
+*[[恩义]]
+*[[恩怨]]
+*[[恩准]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[おん]] (on)
 ** '''[[Kun]]''': [[めぐむ]] (megumu)
+
+===Compounds===
+*[[恩愛]]
+*[[恩義]]
+*[[恩恵]]
+*[[恩師]]
+*[[恩赦]]
+*[[恩賞]]
+*[[恩人]]
+*[[恩寵]]
 
 * '''Other info''':  
 
@@ -50,6 +81,12 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': eun
 ** '''[[McCune-Reischauer]]''': ŭn
 ** '''[[Yale]]''': un
+
+----
+
+==Vitnamese==
+
+# quoc ngu: ơn
 
 ----
 
