--- a/wiki/%E6%94%BF.wikitext
+++ b/wiki/%E6%94%BF.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': government, political affairs
+* '''Common Meaning''': [[government]], [[political]] affairs
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,15 +26,69 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jing3
 
+===Compounds===
+*[[政变]]
+*[[政策]]
+*[[政潮]]
+*[[政党]]
+*[[政敌]]
+*[[政法]]
+*[[政府]]
+*[[政纲]]
+*[[政工]]
+*[[政纪]]
+*[[政绩]]
+*[[政见]]
+*[[政界]]
+*[[政局]]
+*[[政客]]
+*[[政令]]
+*[[政论]]
+*[[政派]]
+*[[政情]]
+*[[政权]]
+*[[政权机关]]
+*[[政审]]
+*[[政事]]
+*[[政体]]
+*[[政通人和]]
+*[[政委]]
+*[[政务]]
+*[[政协]]
+*[[政要]]
+*[[政治]]
+*[[政治避难]]
+*[[政治斗争]]
+*[[政治犯]]
+*[[政治家]]
+*[[政治经济学]]
+*[[政治课]]
+*[[政治面目]]
+*[[政治权利]]
+*[[政治协商会议]]
+*[[政治学]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei), [[しょう]] (shō)
 ** '''[[Kun]]''': [[まつりごと]] (matsurigoto), [[ただす]] (tadasu)
+
+===Compounds===
+*[[政界]]
+*[[政権]]
+*[[政策]]
+*[[政治]]
+*[[政争]]
+*[[政体]]
+*[[政党]]
+*[[政府]]
+*[[政略]]
+*[[政令]]
 
 * '''Other info''':  
 
@@ -50,6 +104,12 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': jeong
 ** '''[[McCune-Reischauer]]''': chŏng
 ** '''[[Yale]]''': ceng
+
+----
+
+==Vietnamese==
+
+*quoc ngu chính
 
 ----
 
