--- a/wiki/%D7%90%D7%A0%D7%99.wikitext
+++ b/wiki/%D7%90%D7%A0%D7%99.wikitext
@@ -1,3 +1,3 @@
 =={{He}}==
 ===Pronoun===
-# I, the first person nominative singular.
+# I, the first person nominative singular, masculine and feminine.
