--- a/wiki/step.wikitext
+++ b/wiki/step.wikitext
@@ -1,4 +1,6 @@
+==English==
 ===Pronunciation===
+*SAMPA: /stEp/
 ====Homophones====
 *[[steppe]]
 
@@ -6,19 +8,19 @@
 '''step''' ([[steps]])
 #forward movement with legs, from one foot to the other 
 
-==Synonyms==
+===Synonyms===
 [[stride]]
 
 ====Translations====
-*Chinese Characters: [[步]]
-*Chinese: [[步]]
+*Chinese Characters: [[歩]], [[步]]
+*Chinese: [[步]], [[步态]]
 *Dutch: [[stap]] ''m''
 *Finnish: [[askel]]
 *French: [[étape]] ''m''
 *German: [[Schritt]] ''m''
 *Greek: [[βήμα]]
 *Italian: [[punto]] ''m''
-*Japanese: [[ステップ]]
+*Japanese: [[歩み]], [[歩幅]], [[ステップ]]
 *Korean: [[단계]]
 *Portuguese: [[etapa]] ''f''
 *Russian: [[шаг]] ''m'' (shag)
@@ -28,7 +30,9 @@
 '''to step''' ([[steps]], [[stepped]], [[stepping]])
 
 ====Translations====
+*Chinese: [[走]], [[步行]]
 *Finnish: [[astua]]
 *German: [[treten]]
+*Japanese: [[歩く]]
 *Russian: [[шагнуть]] (shagnut')
 *Spanish: [[caminar]]
