--- a/wiki/%D7%90%D7%AA.wikitext
+++ b/wiki/%D7%90%D7%AA.wikitext
@@ -2,7 +2,11 @@
 <!-- particle or preposition? -->
 '''אֶת'''
 
-# grammatical marker for the direct object of a verb
+# Grammatical marker for the direct object of a verb
+
+'''אַת'''
+
+# You, second person nominative singular, feminine.
 
 ====Translations====
 *Japanese: [[を]] (o)
