--- a/wiki/calf.wikitext
+++ b/wiki/calf.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Pronunciation===
+*SAMPA: /kA:f/
 ===Etymology 1===
 ===Noun===
 '''calf''' (plural: '''calves''')
@@ -12,6 +14,7 @@
 
 ====Translations====
 *[[Breton]]: [[leue]] ''m'' -où ''pl'' (1)
+*Chinese:  [[小牛]], [[犊]]
 *Danish: [[kalv]] ('''cow or leg sense?''')
 *Dutch: [[kalf]] ''n'' (1)
 *Estonian: [[vasikas]] (1)
@@ -20,11 +23,15 @@
 *[[Frisian]]: [[keal]] ''n'' (1)
 *German: [[Kalb]] ''n'' (1)
 *Hebrew: [[עגל]] ''m''
+*Italian: [[vitello]]
+*Japanese: [[子牛]]
 *Lithuanian: [[veršiukas]] ''m'' (1)
 *Spanish: [[ternera]] ''f'' (1)
 *Swedish: [[kalv]] ''c'' (1,2)
 
 ===Etymology 2===
+Old Norse
+
 ===Noun===
 '''calf'''
 
@@ -32,11 +39,13 @@
 
 ====Translations====
 *[[Breton]]: [[kof-gar]] ''m'' kofoù-gar / kofoù-divhar ''pl''
+*Chinese: [[腓]]
 *Danish: [[kalv]] ('''cow or leg sense?''')
 *Dutch: [[kuit]] ''m''
 *Finnish: [[pohje]]
 *French: [[mollet]] ''m''
-*[[German]]: [[Waden]] ''m''
-*[[Italian]]: [[polpaccio]] ''m''
+*German: [[Waden]] ''m''
+*Italian: [[polpaccio]] ''m''
+*Japanese: [[脹脛]] ([[ふくらはぎ]])
 *Lithuanian: [[blauzda]] ''f''
 *[[Spanish]]: [[pantorrilla]] ''f''
